# Ruvyxa

./: .eniac-plan.md  .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Plan.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ruvyxa-dev.pid  ruvyxa_framework_spec.md  setup.bat  setup.mjs  setup.sh  tsconfig.base.json  vitest.config.ts
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  security.yml
Skill/ruvyxa-framework/: SKILL.md
Skill/ruvyxa-framework/references/: app-guide.md
assets/branding/: README.md
crates/ruvyxa_bundler/: Cargo.toml
crates/ruvyxa_bundler/src/: ast.rs  boundary.rs  cache.rs  chunking.rs  compiler.rs  content.rs  context.rs  hooks.rs  incremental.rs  lib.rs  linker.rs  minifier.rs  output.rs  plugin.rs  resolver.rs  sourcemap.rs  style_module.rs  types.rs
crates/ruvyxa_bundler/tests/: parser_compat.rs
crates/ruvyxa_bundler/tests/fixtures/parser/: advanced-jsx.tsx  advanced-typescript.ts  module-edges.ts
crates/ruvyxa_cli/: Cargo.toml
crates/ruvyxa_cli/src/: image_optimizer.rs  main.rs
crates/ruvyxa_dev_server/: Cargo.toml
crates/ruvyxa_dev_server/src/: action_security.rs  cli_output.rs  env_file.rs  hmr_tracker.rs  html_document.rs  lib.rs  plugin_bridge.rs  port_binding.rs  render_cache.rs  render_pipeline.rs  router.rs  static_assets.rs  style.rs  worker_pool.rs
crates/ruvyxa_diagnostics/: Cargo.toml
crates/ruvyxa_diagnostics/src/: lib.rs
crates/ruvyxa_graph/: Cargo.toml
crates/ruvyxa_graph/src/: lib.rs
crates/ruvyxa_middleware/: Cargo.toml  README.md
crates/ruvyxa_middleware/src/: builtin.rs  config.rs  lib.rs  plugin_host.rs  stack.rs  wasm.rs
docs/: actions.md  bundler-comparison.md  content-and-images.md  data.md  debugging.md  deployment.md  developer-guide.md  getting-started.md  parity.md  performance.md  plugins.md  production-readiness.md  publishing.md  routing.md  testing.md  user-guide.md
docs/architecture/: build-performance-and-mdx.md  bundler-modernization.md  bundler.md  cli.md  concurrency.md  dev-server.md  diagnostics.md  graph.md  middleware.md  official-plugins.md  overview.md  plugins.md  production-readiness.md  project-structure.md  protocols.md  reliability-audit-2026-07.md  security.md  worker-pool.md
docs/guides/: index.md
docs/guides/en/: api-routes.md  cli-commands.md  configuration.md  data-loading-and-cache.md  deployment.md  environment-variables.md  getting-started.md  markdown-mdx-images.md  official-packages.md  plugins.md  rendering-strategies.md  routing.md  server-actions.md  server-client-components.md  styling.md  wasm-plugins.md
docs/guides/th/: api-routes.md  cli-commands.md  configuration.md  data-loading-and-cache.md  deployment.md  environment-variables.md  getting-started.md  markdown-mdx-images.md  official-packages.md  plugins.md  rendering-strategies.md  routing.md  server-actions.md  server-client-components.md  styling.md  wasm-plugins.md
docs/releases/: 1.0.15.md
docs/roadmap/: engineering-backlog.md
docs/superpowers/specs/: 2026-07-08-ruvyxa-build-bundler-upgrades-design.md
examples/basic-app/: AGENTS.md  CLAUDE.md  package.json  ruvyxa.config.ts  tsconfig.json
examples/basic-app/app/: global.css  layout.tsx  page.tsx
examples/basic-app/app/about/: page.tsx
examples/basic-app/app/api/health/: route.ts
examples/basic-app/app/blog/[slug]/: page.tsx  server.ts
examples/basic-app/app/todos/: action.ts  page.tsx
examples/basic-app/public/: site.webmanifest
examples/demo/: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  ruvyxa.config.ts
examples/demo/app/: globals.css  layout.tsx  page.tsx  ruvyxa-env.d.ts
examples/demo/app/blog/: page.tsx
examples/demo/app/content/: page.mdx
examples/demo/app/csr-page/: page.tsx
examples/demo/app/env/: page.tsx
examples/demo/app/plugin-lab/: page.tsx  plugin-marker.ts
examples/demo/app/showcase/: error.tsx  loading.tsx  not-found.tsx  page.tsx
examples/demo/app/ssg-blog/: page.tsx
examples/demo/app/static-page/: page.tsx
examples/demo/app/todos/: action.ts  page.tsx
examples/demo/lib/: db.ts
examples/demo/plugins/: build-pipeline.ts  index.ts  page-observability.ts  render-mode-badges.ts  virtual-message.ts
examples/demo/styles/: config-entry.css
examples/kitchen-sink/: .gitignore  AGENTS.md  CLAUDE.md  package.json  ruvyxa.config.ts  tsconfig.json
examples/kitchen-sink/app/: globals.css  layout.tsx  page.tsx
examples/kitchen-sink/app/about/: page.tsx
examples/kitchen-sink/app/blog/: page.tsx
examples/kitchen-sink/app/csr-page/: page.tsx
examples/kitchen-sink/app/env/: page.tsx
examples/kitchen-sink/app/isr-page/: page.tsx
examples/kitchen-sink/app/ppr-page/: page.tsx
examples/kitchen-sink/app/ssg-blog/: page.tsx
examples/kitchen-sink/app/static-page/: page.tsx
examples/kitchen-sink/app/todos/: action.ts  page.tsx
examples/kitchen-sink/lib/: db.ts  utils.ts
examples/kitchen-sink/styles/: config-entry.css  external.css
scripts/: bench-frameworks.mjs  bump-version.mjs  check-cargo-lock.mjs  format-staged.mjs  pack-smoke.mjs  publish-if-new.mjs  setup-git-hooks.mjs  test-full-flow.ps1  validate-package-metadata.mjs
templates/api-backend/: .gitignore  package.json  ruvyxa.config.ts
templates/api-backend/app/: globals.css  layout.tsx  page.tsx
templates/blog/: .gitignore  package.json  tsconfig.json
templates/blog/app/: globals.css  layout.tsx  page.tsx
templates/blog/app/about/: page.tsx
templates/blog/app/blog/: page.tsx
templates/crud/: package.json
templates/crud/app/: globals.css  layout.tsx  page.tsx
templates/crud/app/about/: page.tsx
templates/crud/app/tasks/: action.ts  page.tsx  server.ts
templates/minimal/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  package.json  ruvyxa.config.ts  tsconfig.json
templates/minimal/app/: global.css  globals.css  layout.tsx  page.tsx
templates/minimal/app/about/: page.tsx
templates/minimal/app/todos/: action.ts  page.tsx
(+15 files in other folders)
