[workspace]
members = [
  "crates/ruvyxa_cli",
  "crates/ruvyxa_dev_server",
  "crates/ruvyxa_graph",
  "crates/ruvyxa_diagnostics",
  "crates/ruvyxa_middleware",
  "crates/ruvyxa_bundler",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/thirawat27/ruvyxa"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
blake3 = "1.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6", features = ["derive"] }
dashmap = "6.1"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
memmap2 = "0.9"
markdown = "1.0"
notify = "8.2"
oxc = { version = "=0.139.0", default-features = false, features = ["codegen", "minifier", "semantic", "transformer"] }
parking_lot = "0.12"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.52", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.7", features = ["fs", "trace", "compression-gzip", "compression-br"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
webp = { version = "0.3.1", default-features = false }
wasmtime = "46.0.1"
wasmtime-wasi = "46.0.1"
