[workspace]
members = [
  "crates/ruvyxa_cli",
  "crates/ruvyxa_dev_server",
  "crates/ruvyxa_graph",
  "crates/ruvyxa_diagnostics",
  "crates/ruvyxa_middleware",
  "crates/ruvyxa_bundler",
]
resolver = "3"

# Shipped as the npm-distributed native CLI binary: favor runtime speed and
# download size over release compile time. panic stays "unwind" because the
# dev server must survive per-request panics.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/thirawat27/ruvyxa"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1.0.104"
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22.1"
blake3 = "1.8.5"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.4", features = ["derive"] }
dashmap = "6.2.1"
futures-core = "0.3.33"
grass = "0.13.4"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
memmap2 = "0.9.11"
markdown = "1.0.0"
notify = "8.2.0"
oxc = { version = "=0.141.0", default-features = false, features = ["codegen", "minifier", "semantic", "transformer"] }
parking_lot = "0.12.5"
rayon = "1.12.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
serde_yaml_ng = "0.10.0"
tempfile = "3.27.0"
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["full"] }
tower = { version = "0.5.3" }
tower-http = { version = "0.7", features = ["fs", "trace", "compression-gzip", "compression-br"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2.5"
webp = { version = "0.3.1", default-features = false }
