[package]
name = "ruvyxa_bundler"
version = "1.0.15"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Ruvyxa Bundler TypeScript/JSX compiler"

[dependencies]
ruvyxa_diagnostics = { path = "../ruvyxa_diagnostics" }
anyhow = { workspace = true }
blake3 = { workspace = true }
dashmap = { workspace = true }
grass = { workspace = true }
memmap2 = { workspace = true }
markdown = { workspace = true }
oxc = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
