[package]
name = "ruvyxa_cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ruvyxa"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ruvyxa_dev_server = { path = "../ruvyxa_dev_server" }
ruvyxa_diagnostics = { path = "../ruvyxa_diagnostics" }
ruvyxa_graph = { path = "../ruvyxa_graph" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true

