[package]
name = "ruvyxa_cli"
version = "1.0.18"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ruvyxa"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
clap.workspace = true
image.workspace = true
rayon.workspace = true
ruvyxa_bundler = { path = "../ruvyxa_bundler" }
ruvyxa_dev_server = { path = "../ruvyxa_dev_server" }
ruvyxa_diagnostics = { path = "../ruvyxa_diagnostics" }
ruvyxa_graph = { path = "../ruvyxa_graph" }
ruvyxa_middleware = { path = "../ruvyxa_middleware" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
webp.workspace = true

[dev-dependencies]
tempfile.workspace = true
