[package]
name = "ruvyxa_dev_server"
version = "1.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
blake3.workspace = true
notify.workspace = true
ruvyxa_diagnostics = { path = "../ruvyxa_diagnostics" }
ruvyxa_graph = { path = "../ruvyxa_graph" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
