[package]
name = "ruvyxa_dev_server"
version = "1.0.8"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
blake3.workspace = true
chrono.workspace = true
notify.workspace = true
parking_lot.workspace = true
ruvyxa_diagnostics = { path = "../ruvyxa_diagnostics" }
ruvyxa_bundler = { path = "../ruvyxa_bundler" }
ruvyxa_graph = { path = "../ruvyxa_graph" }
ruvyxa_middleware = { path = "../ruvyxa_middleware" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
