[package]
name = "ruvyxa_graph"
version = "1.0.12"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ruvyxa_diagnostics = { path = "../ruvyxa_diagnostics" }
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
