[package]
name = "ruvyxa_middleware"
version = "1.0.20"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Tower middleware and TypeScript plugin bridge for Ruvyxa"

[dependencies]
axum.workspace = true
ruvyxa_diagnostics = { path = "../ruvyxa_diagnostics" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
futures-core.workspace = true
